tests/fail/14_invalid_comparison.lang
// ОЖИДАЕТСЯ ОШИБКА: операторы отношения (<, >, <=, >=) применимы только к числам
функция Начало() : целое {
    строка а = "привет";
    строка б = "мир";
    
    // Статическая ошибка: операторы отношения неприменимы к строкам
    лог рез = а > б; 
    
    вернуть 0;
}
